manifests/cluster-addons/monitoring/kube-prometheus-stack/templates/etcd.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-prometheus-stack-kube-etcd
  namespace: kube-system
  labels:
    app: kube-prometheus-stack-kube-etcd
    release: kube-prometheus-stack
spec:
  clusterIP: None
  ports:
    - name: http-metrics
      port: 2381
      protocol: TCP
      targetPort: 2381
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kube-prometheus-stack-kube-etcd
  namespace: kube-system
  labels:
    app: kube-prometheus-stack-kube-etcd
    release: kube-prometheus-stack
subsets:
  - addresses:
      - ip: 192.168.30.100
      - ip: 192.168.30.110
      - ip: 192.168.30.120
    ports:
      - name: http-metrics
        port: 2381
        protocol: TCP
