manifests/cluster-addons/monitoring/kube-prometheus-stack/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bakseter-net-gateway-int
      namespace: tailscale

  hostnames:
    - alertmanager.int.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: kube-prometheus-stack-alertmanager
          port: 9093
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bakseter-net-gateway-int
      namespace: tailscale

  hostnames:
    - prometheus.int.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: kube-prometheus-stack-prometheus
          port: 9090
