manifests/cluster-addons/monitoring/kube-prometheus-stack/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-int
        - matchLabels:
            app.kubernetes.io/name: prometheus-blackbox-exporter
        - matchLabels:
            app: grafana
        - matchLabels:
            app.kubernetes.io/name: tempo
      toPorts:
        - ports:
            - port: '9090'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alertmanager
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP
            - port: '9093'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kube-state-metrics
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: prometheus-operator
      toPorts:
        - ports:
            - port: '10250'
              protocol: TCP

    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toEntities:
        - host
        - remote-node

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus-blackbox-exporter
      toPorts:
        - ports:
            - port: '9115'
              protocol: TCP

    # Any pod in any other namespace, for scrape
    - toEndpoints:
        - matchExpressions:
            - key: 'k8s:io.kubernetes.pod.namespace'
              operator: NotIn
              values:
                - monitoring

    # Scrape Proxmox node exporters
    - toCIDRSet:
        - cidr: 192.168.10.20/32
        - cidr: 192.168.10.21/32
        - cidr: 192.168.10.22/32
        - cidr: 192.168.10.23/32
        - cidr: 192.168.10.24/32
      toPorts:
        - ports:
            - port: '9100'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-operator
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: prometheus-operator

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '10250'
              protocol: TCP

    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: '10250'
              protocol: TCP

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-int
        - matchLabels:
            app.kubernetes.io/name: prometheus
        - matchLabels:
            app.kubernetes.io/name: prometheus-blackbox-exporter
        - matchLabels:
            app: grafana
      toPorts:
        - ports:
            - port: '9093'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toFQDNs:
        - matchName: 'api.pushover.net'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-state-metrics
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
